# iprs

./: .gitignore  .replit  Cargo.toml  README.md  go-ipfs_v0.6.0_linux-amd64.tar.gz.REMOVED.git-id
.cargo/: config
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/io/: utils.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/errors/: custom.rs
core/src/iprs/: configuration.rs  daemon.rs  mod.rs
core/src/ipss/: configuration.rs  daemon.rs  installer.rs  mod.rs
core/src/replication/: engine.rs  mod.rs  node.rs
core/src/utils/: ipfs.rs  mod.rs  os.rs
file_explorer/: Cargo.toml
file_explorer/src/: main.rs
scripts/: cross_compile.sh  macos.sh  windows.sh
scripts/release/ipss.v0.1.1-x86_64-apple-darwin-alpha/: install.command  ipss  uninstall.command
scripts/release/ipss.v0.1.1-x86_64-linux-gnu-alpha/: install.sh  ipss  uninstall.sh
scripts/release/ipss.v0.1.1-x86_64-windows-gnu-alpha/: install.ps1  uninstall.ps1
src/: main.rs
