[package]
name = "core"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "2.0.6"
dirs = "3.0.1"
progress = "0.2"
notify = "4.0.15"
signal-hook = "0.1.16"
queue = "0.3.1"
nanoid = "0.3.0"